--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,26 +1,8 @@
 apply plugin: 'com.android.application'
 apply from: 'https://raw.githubusercontent.com/ihanbo/gradleBaseConfig/master/baseconfig.gradle'
 
-//android {
-//    compileSdkVersion 28
-//    defaultConfig {
-//        applicationId "com.hans.hulk"
-//        minSdkVersion 16
-//        targetSdkVersion 28
-//        versionCode 1
-//        versionName "1.0"
-//    }
-//
-//    buildTypes {
-//        release {
-//            minifyEnabled false
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//        }
-//    }
-//}
-//
-//dependencies {
-//    implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
-//    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-//}
+android {
+    defaultConfig {
+        applicationId "com.hans.hulk"
+    }
+}
