--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,9 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
         classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
 
     }
 }
