--- a/coreutils/build.gradle
+++ b/coreutils/build.gradle
@@ -2,4 +2,6 @@ apply plugin: 'com.android.library'
 apply from: 'https://raw.githubusercontent.com/ihanbo/gradleBaseConfig/master/baseconfig.gradle'
 dependencies {
     compileOnly 'com.hans.applicationholder:applicationholder:1.1'
+    implementation DEP.SUPPORT.recyclerView
+    implementation DEP.SUPPORT.annotations
 }
