--- a/applicationholder/build.gradle
+++ b/applicationholder/build.gradle
@@ -1,3 +1,9 @@
 apply plugin: 'com.android.library'
+ext {
+    BT_GROUP = 'com.hans.applicationholder'
+    BT_ARTIFACT = 'applicationholder'
+    BT_VERSION = '1.3'
+    BT_DESC = 'ApplitionHolder 所有library获取Application用的'
+}
 apply from: 'https://raw.githubusercontent.com/ihanbo/gradleBaseConfig/master/baseconfig.gradle'
 apply from: 'https://raw.githubusercontent.com/ihanbo/gradleBaseConfig/master/bintray_push.gradle'
