--- a/coreutils/build.gradle
+++ b/coreutils/build.gradle
@@ -2,6 +2,10 @@ apply plugin: 'com.android.library'
 apply from: 'https://raw.githubusercontent.com/ihanbo/gradleBaseConfig/master/module_build.gradle'
 dependencies {
     compileOnly DEP.APP_HOLDER
+    compileOnly DEP.GSON
+    implementation DEP.GLIDE.glide
+    implementation DEP.GLIDE.ok
+    implementation DEP.GLIDE.annotation
     implementation DEP.SUPPORT.recyclerView
     implementation DEP.SUPPORT.annotations
 }
