--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 ext {
     BT_GROUP = ''
     BT_ARTIFACT = ''
@@ -12,17 +12,23 @@ apply from: 'https://raw.githubusercontent.com/ihanbo/gradleBaseConfig/master/mo
 android {
 
     defaultConfig {
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/room_schemas".toString()]
+            }
+        }
     }
 }
 
-dependencies{
-    implementation DEP.ROOM.room
-    implementation DEP.ROOM.room_ap
-    implementation DEP.ROOM.room_rx
+
+
+
+dependencies {
+    implementation(DEP.ROOM.room)
+    annotationProcessor DEP.ROOM.room_ap
+    implementation(DEP.ROOM.room_rx)
 
     implementation DEP.GLIDE.glide
-    implementation DEP.GLIDE.glide_ap
+    annotationProcessor DEP.GLIDE.glide_ap
     implementation DEP.GLIDE.glide_ok
 }
-
-
