--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -2,15 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hans.demo">
 
-    <application>
-        <activity android:name=".MainActivity">
+    <application
+        android:name=".App"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme">
 
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".A1"></activity>
     </application>
 
 </manifest>
