--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -6,15 +6,18 @@
         android:name=".App"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".A1" />
+        <activity android:name=".room.A2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".A1"></activity>
     </application>
 
 </manifest>
